--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,6 +5,7 @@ on:
   pull_request:
     branches:
       - v6
+      - v7
   workflow_dispatch:
     inputs:
       fetch-external-links:
@@ -18,11 +19,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c  # tag: v3.3.0
+    - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11  # tag: v4.1.1
     - name: Setup Node.js
-      uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c  # tag: v3.6.0
+      uses: actions/setup-node@8f152de45cc393bb48ce5d89d36b731f54556e65  # tag: v4.0.0
       with:
-        node-version: 18.x
+        node-version: lts/*
     - name: Create a Temporary package.json
       run: npm init --yes
     - name: Install @electron/lint-roller
@@ -30,10 +31,10 @@ jobs:
     - name: Run markdownlint
       run: npx electron-markdownlint "**/*.md"
     - name: Lint JS in Markdown with standard
-      run: npx electron-lint-markdown-standard --root . --ignore-path .markdownlintignore --semi --fix "**/*.md"
+      run: npx electron-lint-markdown-standard --ignore-path .markdownlintignore --semi "**/*.md"
     - name: Lint links
-      run: npx electron-lint-markdown-links --root . --ignore-path .markdownlintignore "**/*.md"
+      run: npx electron-lint-markdown-links --ignore-path .markdownlintignore "**/*.md"
       if: ${{ always() }}
     - name: Check external links
-      run: npx electron-lint-markdown-links --root . --ignore-path .markdownlintignore --fetch-external-links "**/*.md"
+      run: npx electron-lint-markdown-links --ignore-path .markdownlintignore --fetch-external-links "**/*.md"
       if: ${{ github.event.inputs.fetch-external-links }}
